<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/materialBlack"
            android:textSize="28sp"
            android:text="@string/placeholder_reg_act_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/placeholder_reg_act_desc_child"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPersonName"
            android:id="@+id/et_name"
            android:hint="@string/placeholder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_email"
            android:hint="@string/placeholder_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_password"
            android:hint="@string/placeholder_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/register"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</ScrollView>