<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_marginTop="38dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="#000"
            android:text="@string/placeholder_login_act_desc"
            android:textSize="34sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="8dp"
            android:text="@string/login_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:maxLines="1"
            android:layout_marginTop="16sp"
            android:id="@+id/et_email"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:maxLines="1"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/placeholder_pass"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="end"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/loading"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:id="@+id/goto_register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>